<resources>
    <string name="app_name">JOKER</string>
    <string name="settings">Настройки</string>
    <string name="firebase">Firebase</string>
    <string name="queue">Электронная очередь</string>
    <string name="title_activity_login">Вход в систему</string>
    <string name="title_email">Почта</string>
    <string name="title_kontakt_date">Контактные данные</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_phone">Телефон</string>
    <string name="action_sign_in"><u>ВХОД</u></string>
    <string name="action_sign_out"><u>ВЫХОД</u></string>
    <string name="action_sign_registration">Регистрация</string>
    <string name="action_registration"><u>РЕГИСТРАЦИЯ</u></string>
    <string name="action_sign_in_short">Войти в систему</string>
    <string name="action_confirm">Подтвердить</string>
    <string name="action_editing">Редактировать</string>
    <string name="action_saving">Сохранить</string>
    <string name="welcome">"Добро пожаловать !"</string>
    <string name="invalid_username">Не верное имя пользователя</string>
    <string name="invalid_username_email">Не верный адрес эл.почты</string>
    <string name="invalid_password">Пароль должен быть >5 символов</string>
    <string name="login_failed">"Авторизация не удалась"</string>
    <string name="chooseDate">"Выберите дату"</string>
    <string name="chooseRc">"Выберите автоцентр"</string>
    <string name="title_activity_basic">BasicActivity</string>
</resources>
